--- a/coming-soon.htm
+++ b/coming-soon.htm
@@ -4,11 +4,11 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Comming soon</title>
+        <title>Currently Unavailable</title>
     </head>
 
     <body>
-        <h1>Comming soon</h1>
+        <h1>Currently Unavailable</h1>
     </body>
     
 </html>
